--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "puppeteer-test",
+  "name": "puppeteer-scripts",
   "version": "1.0.0",
-  "description": "puppeteer testing",
+  "description": "puppeteer performance monitoring scripts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/index.js $@"
   },
   "author": "",
   "license": "ISC",
