Adding in a dev mode as well as the ability to pass in a custom config object

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "ENV=test jest --coverage --config jest.config.json",
     "test:watch": "ENV=test jest --watch --notify --notifyMode=change --coverage --config jest.config.json",
+    "dev": "ENV=dev node ./src/index.js",
     "start": "node ./src/index.js"
   },
   "repository": {
