--- a/src/config.json
+++ b/src/config.json
@@ -3,6 +3,38 @@
   "urls": [
     {
       "url": "https://www.bbc.co.uk"
+    },
+    {
+      "url": "https://www.cbc.ca/",
+      "plugins": [
+        {
+          "name": "puppeteer-scripts",
+          "config": {
+            "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 12_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Mobile/15E148 Safari/604.1",
+            "viewport": {
+              "width": 1125,
+              "height": 2436,
+              "deviceScaleFactor": 3,
+              "isMobile": true
+            }
+          }
+        }
+      ]
+    },
+    {
+      "url": "https://www.cbc.ca/",
+      "plugins": [
+        {
+          "name": "puppeteer-scripts",
+          "config": {
+            "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36",
+            "viewport": {
+              "width": 1680,
+              "height": 916
+            }
+          }
+        }
+      ]
     }
   ]
 }
